objects/Customer_Interaction__b.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Interactions</relationshipLabel>
        <relationshipName>Customer_Interactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Play__c</fullName>
        <label>Date of Play</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Game_Purchase__c</fullName>
        <label>In-Game Purchase</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Achieved__c</fullName>
        <label>Level Achieved</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lives_Used_This_Game__c</fullName>
        <label>Lives Used This Game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Play_Duration__c</fullName>
        <label>Play Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_This_Game__c</fullName>
        <label>Score This Game</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Customer_Interactions_Index</fullName>
        <fields>
            <name>Account__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Date_of_Play__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Platform__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Customer Interactions Index</label>
    </indexes>
    <label>Customer Interaction</label>
    <pluralLabel>Customer Interactions</pluralLabel>
</CustomObject>